Update README.md
show array & string format for runwar and jvm args keys